# ckp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.ko-KR.md  README.md  pyproject.toml
.github/workflows/: jekyll-gh-pages.yml  test.yml
bench/: __init__.py  util.py
bench/acmicpc/: __init__.py  __main__.py  p01016.py  p01067.py  p02188.py  p02268.py  p02626.py  p07938.py  p11012.py  p11438.py  p12858.py  p12963.py  p13246.py  p13711.py  p17103.py  p17429.py  problems.py
bench/data_structure/: disjoint_set.py
bench/fourier/: complex.py  util.py
bench/geometry/: delaunay.py
bench/linear_algebra/: matrix.py
bench/number_theory/: factor.py  iterate_idiv.py  mobius.py  primality_test.py  zmod.py
bench/util/: __init__.py  bench.py  stat_list.py
ckp/: __init__.py  nimber.py
ckp/automata/: __init__.py  finite_automata.py  regex.py
ckp/data_structure/: __init__.py  disjoint_set.py  wavelet_tree.py
ckp/fourier/: __init__.py  abc.py  complex.py  dft.py  util.py
ckp/geometry/: __init__.py  circumcircle.py  circumsphere.py  convex_hull.py  delaunay.py  half_plane_intersection.py  vector.py
ckp/graph_theory/: __init__.py  bipartite_matching.py  ford_fulkerson.py  scc.py
ckp/language/: from_text.py
ckp/linear_algebra/: __init__.py  matrix.py  matrix_mod.py
ckp/misc/: __init__.py  compress_coords.py  lis.py  sudoku.py
ckp/number_theory/: __init__.py  arithmetic.py  factor.py  misc.py  mobius.py  modular.py  modular_sqrt.py  primality_test.py  prime_sieve.py
docs/: _config.yaml  impacker.md  index.md
test/: __init__.py  nimber.py
test/misc/: lis.py  (+3 more)
(+172 files in other folders)
