[tool.poetry]
name = "ckp"
version = "0.0.1"
description = "Pure Python implementations of competitive programming algorithms."
authors = ["Jimin Park <pjm950@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
