[tool.poetry]
name = "ckp"
version = "0.0.3"
description = "Pure Python implementations of competitive programming algorithms."
authors = ["Jimin Park <pjm950@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
impacker = {git = "https://github.com/123jimin/impacker.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
